# castle

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: char_quad.frag  char_quad.vert  line.vert  quad.frag  quad.vert  screen.frag  screen.vert  sprite_quad.frag  sprite_quad.vert
code/castle/: CMakeLists.txt
code/castle/include/castle/: c_assets.h  c_game.h  c_input.h  c_modding.h  c_player.h  c_rendering.h  c_scene.h  c_tilemap.h  c_ui.h  c_utils.h  c_world.h  player.h
code/castle/src/: c_animation.cpp  c_animation.h  c_assets.cpp  c_assets.h  c_audio.cpp  c_audio.h  c_camera.cpp  c_camera.h  c_enemy_ent.cpp  c_entry.cpp  c_game.cpp  c_game.h  c_input.cpp  c_input.h  c_main_menu.cpp  c_main_menu.h  c_modding.cpp  c_modding.h  c_player.cpp  c_player_ent.cpp  c_player_ent.h  c_rand.cpp  c_rand.h  c_rendering.cpp  c_rendering.h  c_scene.cpp  c_tilemap.cpp  c_ui.cpp  c_utils.cpp  c_utils.h  c_world.cpp  c_world.h
code/castle_asset_packer/: CMakeLists.txt
code/castle_asset_packer/src/: cap_audio.cpp  cap_fonts.cpp  cap_main.cpp  cap_shader_progs.cpp  cap_shared.h  cap_textures.cpp
code/castle_common/: CMakeLists.txt
code/castle_common/include/castle_common/: cc_assets.h  cc_debugging.h  cc_io.h  cc_math.h  cc_mem.h  cc_misc.h
code/castle_common/src/: cc_assets.cpp  cc_debugging.cpp  cc_io.cpp  cc_math.cpp  cc_mem.cpp  cc_misc.cpp
code/castle_engine/: CMakeLists.txt
code/castle_engine/include/castle_engine/: ce_assets.h  ce_game.h  ce_input.h  ce_modding.h  ce_rendering.h  ce_utils.h
code/castle_engine/src/: ce_assets.cpp  ce_game.cpp  ce_input.cpp  ce_modding.cpp
code/castle_mod_builder/: CMakeLists.txt
